<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.aston.cs3mdd.fitnessapp.MainActivity">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/foods"
        android:orderInCategory="101"
        android:title="@string/foods"
        app:showAsAction="never" />
    <item
        android:id="@+id/gyms"
        android:orderInCategory="102"
        android:title="@string/gyms"
        app:showAsAction="never" />
    <item
        android:id="@+id/ManageMyPlansFragment"
        android:orderInCategory="103"
        android:title="@string/workout_plan_manage_title"
        app:showAsAction="never"/>

</menu>