<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.aston.cs3mdd.fitnessapp.MainActivity"
    >
    <item android:id="@+id/HomeFragment"
        android:icon="@drawable/ic_home_24"
        android:title="Home"
        android:enabled="true"
        />
    <item android:id="@+id/GymFragment"
        android:icon="@drawable/ic_dumbbell"
        android:title="@string/gyms"
        android:enabled="true"
        />
    <item
        android:id="@+id/ManageMyPlansFragment"
        android:icon="@drawable/ic_workout_plan"
        android:title="@string/workout_plan_manage_title"
        android:enabled="true"
        />
    <item
        android:id="@+id/LocalGymFragment"
        android:title="@string/gym_local"
        android:enabled="true"
        android:icon="@drawable/ic_location"/>

</menu>