<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogs.AddExerciseDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_container"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dialog_exercise_img"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/ic_background"
                android:scaleType="fitXY"
                android:clipToOutline="true"/>

            <TextView
                android:id="@+id/dialog_body_part_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/dialog_exercise_img"
                android:layout_alignTop="@+id/dialog_exercise_img"
                android:layout_alignBottom="@+id/dialog_exercise_img"
                android:gravity="center_vertical"
                android:textSize="10pt"
                android:text="Body part"
                android:textStyle="bold"
                android:textColor="@color/white"/>


        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/day_hint"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/workout_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_hint"
            android:layout_marginBottom="15dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/num_set_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reps_hint"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/num_reps_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                >

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/danger"
                    android:layout_marginRight="20dp"
                    android:textSize="20dp"
                    android:text="@string/Cancel"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_button"
                    android:layout_toRightOf="@id/cancel_button"
                    android:backgroundTint="@color/success"
                    android:textSize="20dp"
                    android:text="Save to my plan"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>